my-apps/maps/versatiles/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: versatiles-route
  namespace: versatiles
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "vanillax.me"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "maps.vanillax.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: versatiles
          port: 8080
          weight: 1
